# FL-Studio-API-Stubs

./: .flake8  .gitignore  .gitmodules  CONTRIBUTING.md  MANIFEST.in  README.md  Release Checklist.md  docstring_template.mustache  fl_config.json  generate_docs.sh  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  update.sh
.github/workflows/: deploy.yml  generate_docs.yml  mkdocs-dryrun.yml  mkdocs.yml  publish.yml  python-app.yml
data/: docstring_template.mustache  modules.json
docs/: Testing.md  event_mapping.md  index.md
docs/enveditor/: editor.md  index.md  sample.md  script_dialog.md  utils.md
docs/flpianoroll/: index.md  marker.md  note.md  score.md  script_dialog.md  utils.md
docs/scripts/: gen-files.py  gen_pages.py  generate_pages.py
docs/stylesheets/: extra.css
docs/tutorials/: hint_message_icons.md  performance_mode.md
pdoc/src/: index.html
pdoc/src/arrangement/: index.html
pdoc/src/channels/: index.html
pdoc/src/device/: index.html
pdoc/src/fl_context/: context.html  index.html
pdoc/src/general/: index.html
pdoc/src/launchMapPages/: index.html
pdoc/src/midi/: index.html
pdoc/src/mixer/: index.html
pdoc/src/patterns/: index.html
pdoc/src/playlist/: index.html
pdoc/src/plugins/: index.html
pdoc/src/transport/: index.html
pdoc/src/ui/: index.html
pdoc/src/utils/: index.html
resources/: config_schema.json  docstring_template.mustache
resources/pdoc_templates/: index.html.jinja2
scripts/: __init__.py  build_docs.py  check_stubs_against_fl_studio.py  coverage.sh  generate_docs.py  generate_docs.sh  generate_pages.py  transform_docstrings.py  update.sh
src/: channels.py  device.py  mixer.py  playlist.py  ui.py  utils.py
src/arrangement/: __init__.py  arrangement.py
src/channels/: __helpers.py  __init__.py  __notes.py  __properties.py  __sequencer.py  __ui.py  channels.py
src/device/: __device.py  __dispatch.py  __fl.py  __init__.py  __util.py  device.py
src/enveditor/: __init__.py  __sample.py  __script_dialog.py  __utils.py
src/fl_context/: __init__.py  context.py
src/fl_model/: __init__.py  channels.py  consts.py  decorators.py  emulation.py  exceptions.py  patterns.py  state.py  util.py
src/fl_model/config/: __init__.py  config_default.json  config_schema.json  config_typings.py  default.json  load_data.py  schema.json
src/fl_model/configuration/: __init__.py  config_typings.py  default.json  load_data.py  schema.json  target_version.py
src/fl_model/helpers/: __init__.py  file_from_here.py
src/fl_model/models/: __init__.py  channels.py  device.py  general.py  mixer.py  pattern.py  plugin.py  transport.py  ui.py
src/flpianoroll/: __init__.py  __marker.py  __note.py  __score.py
src/general/: __fl_state.py  __init__.py  __undo.py  __undo_proposed.py  general.py
src/launchMapPages/: __init__.py  __launchMapPages.py
src/midi/: __encode.py  __init__.py  midi.py
src/mixer/: __events.py  __init__.py  __properties.py  __selection.py  __tracks.py  mixer.py
src/patterns/: __groups.py  __helpers.py  __init__.py  __performance.py  __properties.py  patterns.py
src/playlist/: __init__.py  __performance.py  __tracks.py  playlist.py
src/plugins/: __init__.py  __plugins.py  plugins.py
src/screen/: __init__.py
src/transport/: __init__.py  __position.py  __state.py
src/ui/: __browser.py  __editors.py  __fl_state.py  __init__.py  __keyboard.py  __navigation.py  __overlays.py  __windows.py  ui.py
src/utils/: __init__.py  utils.py
tests/: __init__.py  conftest.py  transport_test.py
tests/channels/: grid_bits_test.py  index_test.py  mute_solo_test.py  plug_properties_test.py
tests/config/: config_test.py  disallow_deprecated.json  disallow_deprecated_old_target.json  disallow_deprecated_test.py  disallow_future_test.py  disallow_key_echo.json  disallow_key_echo_test.py  empty_config.json  invalid_bad_property.json  invalid_bad_type.json  load_config_test.py  old_target.json  override_config.json
tests/device/: sync_test.py
tests/emulation/: __init__.py  _device.py  test_callbacks.py
tests/general/: undo.py  undo_bugs.md  undo_test.py
tests/helpers/: __init__.py  temp_file.py
tests/patterns/: grid_bits_test.py  indexes_test.py
