[tool.poetry]
name = "fl-studio-api-stubs"
version = "33.2.0"

description = "Module and function definitions and documentation for the FL Studio Python API"
readme = "README.md"

authors = ["Miguel Guthridge <hdsq@outlook.com.au>"]
license = "LGPL-3.0-only"

repository = "https://github.com/MiguelGuthridge/FL-Studio-Api-Stubs"
documentation = "https://miguelguthridge.github.io/FL-Studio-API-Stubs/"

keywords = [
    "fl-studio",
    "midi",
    "api",
    "documentation",
    "stubs",
    "fl",
    "studio",
    "daw",
    "controller",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Other Environment",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
    "Typing :: Stubs Only",
]
include = ["py.typed"]

packages = [
    # MIDI controller scripting
    { include = "arrangement", from = "transdoc_build" },
    { include = "channels", from = "transdoc_build" },
    { include = "device", from = "transdoc_build" },
    { include = "general", from = "transdoc_build" },
    { include = "launchMapPages", from = "transdoc_build" },
    { include = "mixer", from = "transdoc_build" },
    { include = "patterns", from = "transdoc_build" },
    { include = "playlist", from = "transdoc_build" },
    { include = "plugins", from = "transdoc_build" },
    { include = "screen", from = "transdoc_build" },
    { include = "transport", from = "transdoc_build" },
    { include = "ui", from = "transdoc_build" },
    # MIDI controller scripting extra libraries
    { include = "midi", from = "transdoc_build" },
    { include = "utils", from = "transdoc_build" },
    # API stubs extra modules
    { include = "fl_classes", from = "transdoc_build" },
    { include = "fl_model", from = "transdoc_build" },  # deprecated
    # Edison scripting
    { include = "enveditor", from = "transdoc_build" },
    # Piano roll scripting
    { include = "flpianoroll", from = "transdoc_build" },
]

[tool.poetry.scripts]
docs = "scripts.build_docs:main"
build = "scripts.transform_docstrings:transform_modules"

[tool.poetry.urls]
"Online Documentation" = "https://miguelguthridge.github.io/FL-Studio-API-Stubs/"
"Bug Tracker" = "https://github.com/MiguelGuthridge/FL-Studio-Api-Stubs/issues"


[tool.poetry.dependencies]
python = "^3.9"
jsonschema = "^4.17.3"
transdoc = "^0.1.0"

[tool.poetry.group.dev.dependencies]
flapi = "^0.4.0"
flake8-pyproject = "^1.2.3"
pytest = "^7.2.2"
mypy = "^1.1.1"
flake8 = "^6.0.0"
typing-extensions = "^4.5.0"
coverage = "^7.2.2"
types-jsonschema = "^4.17.0"
mkdocs = "^1.4.2"
mkdocs-gen-files = "^0.4.0"
mkdocs-material = "^8.5.11"
mkdocstrings = {version = "^0.20.0", extras = ["python"]}
autopep8 = "^2.0.2"

[tool.flake8]
exclude = [
    '.git',
    '__pycache__',
    'old',
    'build',
    'dist',
]
ignore = [
    'E501',
    'W503',
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
