[metadata]
name = FL_Studio_API_Stubs
version = 19.11
author = Miguel Guthridge
author_email = hdsq@outlook.com.au
description = Module and function definitions and documentation for the FL Studio Python API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MiguelGuthridge/FL-Midi-Stub
project_urls =
    Online Documentation = https://miguelguthridge.github.io/FL-Midi-Stub/pdoc/src/index.html
    Bug Tracker = https://github.com/MiguelGuthridge/FL-Midi-Stub/issues
classifiers =
    Programming Language :: Python :: 3
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable
    Environment :: Other Environment
keywords =
    fl-studio
    midi
    api
    documentation
    stubs
    fl
    studio
    daw

[options]
packages = find:
package_dir =
    =src
python_requires = >=3.9.1
include_package_data = True

[options.packages.find]
where = src
