[metadata]
name = FL_Studio_API_Stubs
version = 20.6.0
author = Miguel Guthridge
author_email = hdsq@outlook.com.au
description = Module and function definitions and documentation for the FL Studio Python API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MiguelGuthridge/FL-Studio-Api-Stubs
project_urls =
    Online Documentation = https://miguelguthridge.github.io/FL-Studio-Api-Stubs/pdoc/src/index.html
    Bug Tracker = https://github.com/MiguelGuthridge/FL-Studio-Api-Stubs/issues
classifiers =
    Programming Language :: Python :: 3
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable
    Environment :: Other Environment
keywords =
    fl-studio
    midi
    api
    documentation
    stubs
    fl
    studio
    daw

[options]
packages = find:
install_requires =
    jsonschema
package_dir =
    =src
python_requires = >=3.9.1
include_package_data = True

[options.packages.find]
where = src
